pod-security-cel/baseline/restrict-seccomp/restrict-seccomp.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-seccomp
  annotations:
    policies.kyverno.io/title: Restrict Seccomp in CEL expressions
    policies.kyverno.io/category: Pod Security Standards (Baseline) in CEL
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.11.0
    kyverno.io/kubernetes-version: "1.26-1.27"
    policies.kyverno.io/description: >-
      The seccomp profile must not be explicitly set to Unconfined. This policy, 
      requiring Kubernetes v1.19 or later, ensures that seccomp is unset or 
      set to `RuntimeDefault` or `Localhost`.
spec:
  background: true
  validationFailureAction: Audit
  rules:
    - name: check-seccomp
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        cel:
          expressions:
            - expression: >- 
                !has(object.spec.securityContext) ||
                !has(object.spec.securityContext.seccompProfile) ||
                !has(object.spec.securityContext.seccompProfile.type) ||
                object.spec.securityContext.seccompProfile.type == 'RuntimeDefault' ||
                object.spec.securityContext.seccompProfile.type == 'Localhost'
              message: >-
                Use of custom Seccomp profiles is disallowed. The field
                spec.securityContext.seccompProfile.type must be unset or set to `RuntimeDefault` or `Localhost`.

            - expression: >- 
                object.spec.containers.all(container, !has(container.securityContext) ||
                !has(container.securityContext.seccompProfile) ||
                !has(container.securityContext.seccompProfile.type) ||
                container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
                container.securityContext.seccompProfile.type == 'Localhost')
              message: >-
                Use of custom Seccomp profiles is disallowed. The field
                spec.containers[*].securityContext.seccompProfile.type must be unset or set to `RuntimeDefault` or `Localhost`.

            - expression: >- 
                !has(object.spec.initContainers) ||
                object.spec.initContainers.all(container, !has(container.securityContext) ||
                !has(container.securityContext.seccompProfile) ||
                !has(container.securityContext.seccompProfile.type) ||
                container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
                container.securityContext.seccompProfile.type == 'Localhost')
              message: >-
                Use of custom Seccomp profiles is disallowed. The field
                spec.initContainers[*].securityContext.seccompProfile.type must be unset or set to `RuntimeDefault` or `Localhost`.

            - expression: >- 
                !has(object.spec.ephemeralContainers) ||
                object.spec.ephemeralContainers.all(container, !has(container.securityContext) ||
                !has(container.securityContext.seccompProfile) ||
                !has(container.securityContext.seccompProfile.type) ||
                container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
                container.securityContext.seccompProfile.type == 'Localhost')
              message: >-
                Use of custom Seccomp profiles is disallowed. The field
                spec.ephemeralContainers[*].securityContext.seccompProfile.type must be unset or set to `RuntimeDefault` or `Localhost`.
